Index Prelim Changes made + Video Background for Nav Bar
Changes:
1. Added some info for index.html
2. Video now playing as bg for nav bar

TODO:
Put up About Us information for index.html

--- a/nav.html
+++ b/nav.html
@@ -160,10 +160,10 @@
 <nav class="nk-navbar nk-navbar-full nk-navbar-align-center nk-navbar-drop-effect-1" id="nk-full">
     
         <div class="nk-navbar-bg">
-            <!--TODO: Add image later?-->
-            <!-- <div class="bg-image">
-                <img src="assets/images/bg-menu-full-light.jpg" alt="" class="jarallax-img">
-            </div> -->
+            <video width="100%" height="auto" controls autoplay loop>
+                <source src="assets/images/bg-video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video> 
         </div>
     
     <div class="nk-nav-table">
