--- a/our-menu.html
+++ b/our-menu.html
@@ -153,10 +153,10 @@
 <nav class="nk-navbar nk-navbar-full nk-navbar-align-center nk-navbar-drop-effect-1" id="nk-full">
     
         <div class="nk-navbar-bg">
-            <!--TODO: Add image later?-->
-            <!-- <div class="bg-image">
-                <img src="assets/images/bg-menu-full-light.jpg" alt="" class="jarallax-img">
-            </div> -->
+            <video width="100%" height="auto" controls autoplay loop>
+                <source src="assets/images/bg-video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
     
     <div class="nk-nav-table">
@@ -279,7 +279,7 @@
                 <div class="nk-social">
                     <ul>
                         <li><a class="nk-social-twitter" href="https://twitter.com/"><span><span class="nk-social-front fa fa-twitter"></span><span class="nk-social-back fa fa-twitter"></span></span></a></li>
-                        <li><a class="nk-social-facebook" href="https://www.facebook.com/"><span><span class="nk-social-front fa fa-facebook"></span><span class="nk-social-back fa fa-facebook"></span></span></a></li>
+                        <li><a class="nk-social-facebook" href="https://www.facebook.com/meiheongyuen.dessert"><span><span class="nk-social-front fa fa-facebook"></span><span class="nk-social-back fa fa-facebook"></span></span></a></li>
                         <li><a class="nk-social-instagram" href="https://www.instagram.com/"><span><span class="nk-social-front fa fa-instagram"></span><span class="nk-social-back fa fa-instagram"></span></span></a></li>
                     </ul>
                 </div>
@@ -1139,7 +1139,7 @@
                 <div class="nk-social">
                     <ul>
                         <li><a class="nk-social-twitter" href="https://twitter.com/"><span><span class="nk-social-front fa fa-twitter"></span><span class="nk-social-back fa fa-twitter"></span></span></a></li>
-                        <li><a class="nk-social-facebook" href="https://www.facebook.com/"><span><span class="nk-social-front fa fa-facebook"></span><span class="nk-social-back fa fa-facebook"></span></span></a></li>
+                        <li><a class="nk-social-facebook" href="https://www.facebook.com/meiheongyuen.dessert"><span><span class="nk-social-front fa fa-facebook"></span><span class="nk-social-back fa fa-facebook"></span></span></a></li>
                         <li><a class="nk-social-instagram" href="https://www.instagram.com/"><span><span class="nk-social-front fa fa-instagram"></span><span class="nk-social-back fa fa-instagram"></span></span></a></li>
                     </ul>
                 </div>
