--- a/franchise.html
+++ b/franchise.html
@@ -371,8 +371,8 @@
 				Are you looking for a <i>business opportunity</i>? Well, we are!<br/><br/>
 				If you like the idea of running a dessert business like ours, why not speak to us.<br/><br/>
 				We are looking to expand our business <i>locally</i> and <i>overseas</i> and would be doing it through Franchising.<br/><br/>
-				Do indicate your interest by <i>sending us a message</i> through the interface beside, or reach us through the following contact information!
-				You can also provide us more detail using our <a href="./MHY - Franchise Enquiry Form MHYD.docx" download>Franchise Enquiry Form</a> and email it to the email address below.
+				Do provide us with more details using our <a href="./MHY - Franchise Enquiry Form MHYD.docx" download>Franchise Enquiry Form</a> and email it to the email address below!<br/><br/>
+				You can also <i>send us a message</i> through the form on this page, or reach us through the following contact information.
 			</p>
 
             <ul class="nk-contact-info">
