Edited Franchise and Finished index.html
Edited Franchise to follow the footer and icons of the other pages

Finished index.html with links to custom css page for specific specifications to design

--- a/nav.html
+++ b/nav.html
@@ -286,7 +286,7 @@
                 <div class="nk-social">
                     <ul>
                         <li><a class="nk-social-twitter" href="https://twitter.com/"><span><span class="nk-social-front fa fa-twitter"></span><span class="nk-social-back fa fa-twitter"></span></span></a></li>
-                        <li><a class="nk-social-facebook" href="https://www.facebook.com/"><span><span class="nk-social-front fa fa-facebook"></span><span class="nk-social-back fa fa-facebook"></span></span></a></li>
+                        <li><a class="nk-social-facebook" href="https://www.facebook.com/meiheongyuen.dessert"><span><span class="nk-social-front fa fa-facebook"></span><span class="nk-social-back fa fa-facebook"></span></span></a></li>
                         <li><a class="nk-social-instagram" href="https://www.instagram.com/"><span><span class="nk-social-front fa fa-instagram"></span><span class="nk-social-back fa fa-instagram"></span></span></a></li>
                     </ul>
                 </div>
