--- a/location-chinatown.html
+++ b/location-chinatown.html
@@ -380,7 +380,7 @@ Additional Classes:
 <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyBlQNaWM2_jxXJbRwL2ozXWw3cg-uuld8w&sensor=false"></script>
 <script>
     function initializeGmaps() {
-        var LatLng = {lat: 1.283292, lng: 103.843197};
+        var LatLng = {lat: 1.28333, lng: 103.84338};
         var mapCanvas = document.getElementById('google-map-contact');
         var mapOptions = {
             center      : LatLng,
@@ -410,8 +410,8 @@ Additional Classes:
 <!-- START: Pagination -->
 <div class="nk-pagination nk-pagination-center">
     <div class="container">
-        <a class="nk-pagination-prev" href="location-yishun.html"><span class="pe-7s-angle-left"></span> Yishun Outlet</a>
-            <a class="nk-pagination-next" href="#">Chinatown Point Outlet <span class="pe-7s-angle-right"></span> </a>
+        <a class="nk-pagination-prev" href="location-northpoint-city.html"><span class="pe-7s-angle-left"></span> Yishun Outlet</a>
+            <a class="nk-pagination-next" href="location-chinatown-point.html"> <span class="pe-7s-angle-right"></span> Chinatown Point Outlet</a>
     </div>
 </div>
 <!-- END: Pagination -->
