Updates to Chin How's work
Added new pics - but if got any nicer pics, please contribute.

Added his name as author

Changed title format

Changed content of description of each stall

Removed all chinese words to be consistent

--- a/location-clementi-mall.html
+++ b/location-clementi-mall.html
@@ -15,11 +15,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Skylith | Location-Clementi-Mall</title>
+    <title>Mei Heong Yuan Desserts - Clementi Mall</title>
 
     <meta name="description" content="Location-Clementi-Mall">
     <meta name="keywords" content="dessert, food, asian">
-    <meta name="author" content="Jonathan Lee">
+    <meta name="author" content="Tan Chin How">
 
     <link rel="icon" type="image/png" href="assets/images/mhylogo.png">
 
@@ -342,7 +342,7 @@ Additional Classes:
             <div class="col-lg-8">
                 <div class="nk-portfolio-info">
                     <div class="nk-portfolio-text">
-                        <p>The flagship shop of the franchise, it is a great place for tourists to get a cool bite into Singapore's culture as they seek respite from the blistering heat of Singapore.</p>
+                        <p>Calling out to all our West-siders, we have heard your cries for real authentic Chinese dessert and brought it to Clementi! Come, don't hesitate, don't resist. Enjoy with us today!</p>
                     </div>
                 </div>
             </div>
@@ -353,7 +353,7 @@ Additional Classes:
                         <td>
                             3155 Commonwealth Avenue West<br>
 							#04-19,<br>
-							Clementi Mall 金文泰广场<br>
+							Clementi Mall<br>
 							Singapore 129588
                         </td>
                     </tr>
