--- a/location-velocity-novena.html
+++ b/location-velocity-novena.html
@@ -15,11 +15,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Skylith | Location-Velocity-Novena</title>
+    <title>Mei Heong Yuan Desserts - Velocity Novena</title>
 
     <meta name="description" content="Location-Velocity-Novena">
     <meta name="keywords" content="dessert, food, asian">
-    <meta name="author" content="Jonathan Lee">
+    <meta name="author" content="Tan Chin How">
 
     <link rel="icon" type="image/png" href="assets/images/mhylogo.png">
 
@@ -342,7 +342,7 @@ Additional Classes:
             <div class="col-lg-8">
                 <div class="nk-portfolio-info">
                     <div class="nk-portfolio-text">
-                        <p>The flagship shop of the franchise, it is a great place for tourists to get a cool bite into Singapore's culture as they seek respite from the blistering heat of Singapore.</p>
+                        <p>We know how hard it is to be a parent, having to send your kids for enrichment, drop them off for hospital checks, etc. We can't change that, but you can change where you wanna hang out. Whilst waiting for your kids at the nearby tution centres or at TTSH, why not relax and come down to our Novena outlet. Parents deserve a treat too you know?</p>
                     </div>
                 </div>
             </div>
