--- a/location-beach-road.html
+++ b/location-beach-road.html
@@ -15,11 +15,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Skylith | Location-BeachRoad</title>
+    <title>Mei Heong Yuan Desserts - Beach Road</title>
 
     <meta name="description" content="Location-BeachRoad">
     <meta name="keywords" content="dessert, food, asian">
-    <meta name="author" content="Jonathan Lee">
+    <meta name="author" content="Tan Chin How">
 
     <link rel="icon" type="image/png" href="assets/images/mhylogo.png">
 
@@ -342,7 +342,7 @@ Additional Classes:
             <div class="col-lg-8">
                 <div class="nk-portfolio-info">
                     <div class="nk-portfolio-text">
-                        <p>The flagship shop of the franchise, it is a great place for tourists to get a cool bite into Singapore's culture as they seek respite from the blistering heat of Singapore.</p>
+                        <p>Located at a location rich in history, deep in its Hainan roots and back when it formed the iconic coastal line, it has now been transformed to the fringe of a growing metropolitan skyline. What could be better than to appreciate the traditional desserts of Mei Heong Yuan whilst glimpsing at the beautiful of the sunny island of Singapore?</p>
                     </div>
                 </div>
             </div>
@@ -364,7 +364,6 @@ Additional Classes:
                         <td>
                             9.30am to 9.30pm<br>
 							(Monday – Saturday)<br>
-                            <strong>Closed on Sunday</strong>  
                         </td>
                     </tr>
                 </table>
