--- a/location-chinatown.html
+++ b/location-chinatown.html
@@ -15,11 +15,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Skylith | Location-Chinatown</title>
+    <title>Mei Heong Yuan Desserts - Chinatown</title>
 
     <meta name="description" content="Location-Chinatown">
     <meta name="keywords" content="dessert, food, asian">
-    <meta name="author" content="Jonathan Lee">
+    <meta name="author" content="Tan Chin How">
 
     <link rel="icon" type="image/png" href="assets/images/mhylogo.png">
 
