Some brief changes to the titles
Changes to the title to accurately reflect who made the page. Well done guys, we made it baby! <3 have a good weekend

--- a/feature.html
+++ b/feature.html
@@ -17,7 +17,7 @@
 
     <title>Mei Heong Yuan Dessert - Feature</title>
 
-    <meta name="description" content="Our Menu">
+    <meta name="description" content="Feature">
     <meta name="keywords" content="dessert, food, asian, features">
     <meta name="author" content="Lee Jun Ming">
 
