--- a/promotions.html
+++ b/promotions.html
@@ -19,7 +19,7 @@
 
     <meta name="description" content="Promotions">
     <meta name="keywords" content="dessert, food, asian">
-    <meta name="author" content="Jonathan Lee">
+    <meta name="author" content="Dominic Keeley Gaian">
 
     <link rel="icon" type="image/png" href="assets/images/mhylogo.png">
 
