--- a/promotions-test.html
+++ b/promotions-test.html
@@ -15,11 +15,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Skylith | Minimal Freelancer Portfolio - Single Post</title>
+    <title>Mei Heong Yuan Dessert - Promotions</title>
 
     <meta name="description" content="Promotions">
-    <meta name="keywords" content="portfolio, clean, minimal, blog, template, portfolio website">
-    <meta name="author" content="dessert, food, asian">
+    <meta name="keywords" content="dessert, food, asian">
+    <meta name="author" content="Dominic Keeley Gaian">
 
     <link rel="icon" type="image/png" href="assets/images/mhylogo.png">
 
