Tried something with jarallax-video
Hopefully it works with the scaling

--- a/promotions.html
+++ b/promotions.html
@@ -165,7 +165,7 @@
     
         <div class="nk-navbar-bg">
             <video width="100%" height="auto" controls autoplay loop>
-                <source src="assets/images/bg-video.mp4" type="video/mp4">
+                <source src="assets/images/bg-video.mp4" type="video/mp4" class="jarallax-video">
                 Your browser does not support the video tag.
             </video> 
         </div>
