--- a/feature.html
+++ b/feature.html
@@ -326,7 +326,7 @@ Additional Classes:
     <div class="bg-image bg-image-parallax">
         <!-- Credits to Mr Kathiravan Manoharan for the beautiful shot
             http%3A%2F%2Fwww.kathiravan-manoharan.com%2F2017%2F07%2Fwanderers-diary-tangyuan-and-mei-heong.html&psig=AOvVaw1oiqVAri4UuNKHIm4So0zR&ust=1550822147084807-->
-        <img src="assets/images/featured-gallery.jpg" alt="" class="jarallax-img">
+        <img src="assets/images/featured-gallery.jpg" alt="featured-gallery" class="jarallax-img">
         <div class="bg-image-overlay" style="background-color: rgba(255, 255, 255, 0.2);"></div>
     </div>
     
@@ -412,14 +412,14 @@ Additional Classes:
             <div class="col-lg-6">
                 <figure style="display:block; text-align:center;">
                     <a href="assets/articles/MHY.pdf" target="_blank">
-                        <img src="assets/images/article-MHY.png" width="350" height="450" />
+                        <img src="assets/images/article-MHY.png" alt="article-by-singapore-excellence-award" tooltip="Click to read" width="350" height="450" />
                     </a>
                 </figure>
             </div>
             <div class="col-lg-6">
                 <figure style="display:block; text-align:center;">
                     <a href="assets/articles/singa_news_article.pdf" target="_blank">
-                        <img src="assets/images/article-singa_news.png" width="350" height="450" />
+                        <img src="assets/images/article-singa_news.png" alt="article-by-singa-news" tooltip="Click to read" width="350" height="450" />
                     </a>
                 </figure>
             </div>
@@ -445,17 +445,17 @@ Additional Classes:
                 <div class="col-lg-4">
                     <h2>2012</h2>
                     <figure>
-                        <img class="img-modal" src="assets/images/awards-logo_seamain.jpg" alt="seamain_logo_award" data-toggle="modal" data-target="#awards-modal" width="200" height="280" />
+                        <img class="img-modal" src="assets/images/awards-logo_seamain.jpg" alt="seamain_logo_award" tooltip="Singapore Excellence Award 2012" data-toggle="modal" data-target="#awards-modal" width="200" height="280" />
                     </figure>
                 </div>
             <div class="col-lg-4">
                 <section>
                     <h2>2010</h2>
                     <figure>
-                        <img class="img-modal" src="assets/images/awards-CNNGo.jpg" alt="CNNGo_award" data-toggle="modal" data-target="#awards-modal" width="200" height="135" />
+                        <img class="img-modal" src="assets/images/awards-CNNGo.jpg" alt="CNNGo_award" tooltip="CNN Go Award 2010" data-toggle="modal" data-target="#awards-modal" width="200" height="135" />
                     </figure>
                     <figure>
-                        <img class="img-modal" src="assets/images/awards-TheGreenBook.jpg" alt="TheGreenBook_award" data-toggle="modal" data-target="#awards-modal" width="200" height="135" />
+                        <img class="img-modal" src="assets/images/awards-TheGreenBook.jpg" alt="TheGreenBook_award" tooltip="The Green Book Award 2010" data-toggle="modal" data-target="#awards-modal" width="200" height="135" />
                     </figure>
                 </section>
             </div>
@@ -463,7 +463,7 @@ Additional Classes:
                 <section>
                     <h2>2008</h2>
                     <figure>
-                        <img class="img-modal" src="assets/images/awards-SnackAttack2.jpg" alt="snackattack-award" data-toggle="modal" data-target="#awards-modal" width="200" height="280" />
+                        <img class="img-modal" src="assets/images/awards-SnackAttack2.jpg" alt="snackattack-award" tooltip="Featured on Channel 8 Snack Attack 2008" data-toggle="modal" data-target="#awards-modal" width="200" height="280" />
                     </figure>
                 </section>
             </div>
