--- a/feature.html
+++ b/feature.html
@@ -412,14 +412,14 @@ Additional Classes:
             <div class="col-lg-6">
                 <figure style="display:block; text-align:center;">
                     <a href="assets/articles/MHY.pdf" target="_blank">
-                        <img src="assets/images/article-MHY.png" alt="article-by-singapore-excellence-award" tooltip="Click to read" width="350" height="450" />
+                        <img src="assets/images/article-MHY.png" alt="article-by-singapore-excellence-award" title="Click to read" width="350" height="450" />
                     </a>
                 </figure>
             </div>
             <div class="col-lg-6">
                 <figure style="display:block; text-align:center;">
                     <a href="assets/articles/singa_news_article.pdf" target="_blank">
-                        <img src="assets/images/article-singa_news.png" alt="article-by-singa-news" tooltip="Click to read" width="350" height="450" />
+                        <img src="assets/images/article-singa_news.png" alt="article-by-singa-news" title="Click to read" width="350" height="450" />
                     </a>
                 </figure>
             </div>
@@ -445,17 +445,17 @@ Additional Classes:
                 <div class="col-lg-4">
                     <h2>2012</h2>
                     <figure>
-                        <img class="img-modal" src="assets/images/awards-logo_seamain.jpg" alt="seamain_logo_award" tooltip="Singapore Excellence Award 2012" data-toggle="modal" data-target="#awards-modal" width="200" height="280" />
+                        <img class="img-modal" src="assets/images/awards-logo_seamain.jpg" alt="seamain_logo_award" title="Singapore Excellence Award 2012" data-toggle="modal" data-target="#awards-modal" width="200" height="280" />
                     </figure>
                 </div>
             <div class="col-lg-4">
                 <section>
                     <h2>2010</h2>
                     <figure>
-                        <img class="img-modal" src="assets/images/awards-CNNGo.jpg" alt="CNNGo_award" tooltip="CNN Go Award 2010" data-toggle="modal" data-target="#awards-modal" width="200" height="135" />
+                        <img class="img-modal" src="assets/images/awards-CNNGo.jpg" alt="CNNGo_award" title="CNN Go Award 2010" data-toggle="modal" data-target="#awards-modal" width="200" height="135" />
                     </figure>
                     <figure>
-                        <img class="img-modal" src="assets/images/awards-TheGreenBook.jpg" alt="TheGreenBook_award" tooltip="The Green Book Award 2010" data-toggle="modal" data-target="#awards-modal" width="200" height="135" />
+                        <img class="img-modal" src="assets/images/awards-TheGreenBook.jpg" alt="TheGreenBook_award" title="The Green Book Award 2010" data-toggle="modal" data-target="#awards-modal" width="200" height="135" />
                     </figure>
                 </section>
             </div>
@@ -463,7 +463,7 @@ Additional Classes:
                 <section>
                     <h2>2008</h2>
                     <figure>
-                        <img class="img-modal" src="assets/images/awards-SnackAttack2.jpg" alt="snackattack-award" tooltip="Featured on Channel 8 Snack Attack 2008" data-toggle="modal" data-target="#awards-modal" width="200" height="280" />
+                        <img class="img-modal" src="assets/images/awards-SnackAttack2.jpg" alt="snackattack-award" title="Featured on Channel 8 Snack Attack 2008" data-toggle="modal" data-target="#awards-modal" width="200" height="280" />
                     </figure>
                 </section>
             </div>
