Changed the arrow for the nav

--- a/location-beach-road.html
+++ b/location-beach-road.html
@@ -380,7 +380,7 @@ Additional Classes:
 <div class="nk-pagination nk-pagination-center">
     <div class="container">
         <a class="nk-pagination-prev" href="location-marina-square.html"><span class="pe-7s-angle-left"></span> Marina Square Outlet</a>
-        <a class="nk-pagination-next" href="location-northpoint-city.html"><span class="pe-7s-angle-right"></span>Northpoint City@Yishun </a>
+        <a class="nk-pagination-next" href="location-northpoint-city.html">Northpoint City@Yishun<span class="pe-7s-angle-right"></span></a>
     </div>
 </div>
 <!-- END: Pagination -->
