--- a/location-chinatown-point.html
+++ b/location-chinatown-point.html
@@ -381,7 +381,7 @@ Additional Classes:
 <div class="nk-pagination nk-pagination-center">
     <div class="container">
         <a class="nk-pagination-prev" href="location-chinatown.html"><span class="pe-7s-angle-left"></span> Chinatown Outlet</a>
-        <a class="nk-pagination-next" href="location-clementi-mall.html"><span class="pe-7s-angle-right"></span> Clementi Mall Outlet</a>
+        <a class="nk-pagination-next" href="location-clementi-mall.html">Clementi Mall Outlet <span class="pe-7s-angle-right"></span></a>
     </div>
 </div>
 <!-- END: Pagination -->
