--- a/location-chinatown.html
+++ b/location-chinatown.html
@@ -388,7 +388,7 @@
 <div class="nk-pagination nk-pagination-center">
     <div class="container">
         <a class="nk-pagination-prev" href="location-northpoint-city.html"><span class="pe-7s-angle-left"></span> Yishun Outlet</a>
-            <a class="nk-pagination-next" href="location-chinatown-point.html"> <span class="pe-7s-angle-right"></span> Chinatown Point Outlet</a>
+            <a class="nk-pagination-next" href="location-chinatown-point.html">Chinatown Point Outlet <span class="pe-7s-angle-right"></span></a>
     </div>
 </div>
 <!-- END: Pagination -->
