--- a/location-clementi-mall.html
+++ b/location-clementi-mall.html
@@ -382,7 +382,7 @@ Additional Classes:
 <div class="nk-pagination nk-pagination-center">
     <div class="container">
         <a class="nk-pagination-prev" href="location-chinatown-point.html"><span class="pe-7s-angle-left"></span> Chinatown Point Outlet</a>
-        <a class="nk-pagination-next" href="location-velocity-novena.html"><span class="pe-7s-angle-right"></span>Velocity@Novena Outlet</a>
+        <a class="nk-pagination-next" href="location-velocity-novena.html">Velocity@Novena Outlet <span class="pe-7s-angle-right"></span></a>
     </div>
 </div>
 <!-- END: Pagination -->
