--- a/location-marina-square.html
+++ b/location-marina-square.html
@@ -383,7 +383,7 @@ Additional Classes:
 <div class="nk-pagination nk-pagination-center">
     <div class="container">
         <a class="nk-pagination-prev" href="location-velocity-novena.html"><span class="pe-7s-angle-left"></span> Velocity@Novena Outlet</a>
-        <a class="nk-pagination-next" href="location-beach-road.html"><span class="pe-7s-angle-right"></span> Beach Road Outlet</a>
+        <a class="nk-pagination-next" href="location-beach-road.html">Beach Road Outlet <span class="pe-7s-angle-right"></span></a>
     </div>
 </div>
 <!-- END: Pagination -->
