--- a/location-velocity-novena.html
+++ b/location-velocity-novena.html
@@ -382,7 +382,7 @@ Additional Classes:
 <div class="nk-pagination nk-pagination-center">
     <div class="container">
         <a class="nk-pagination-prev" href="location-clementi-mall.html"><span class="pe-7s-angle-left"></span> Clementi Mall Outlet</a>
-        <a class="nk-pagination-next" href="location-marina-square.html"><span class="pe-7s-angle-right"></span> Marina Square Outlet</a>
+        <a class="nk-pagination-next" href="location-marina-square.html">Marina Square Outlet <span class="pe-7s-angle-right"></span></a>
     </div>
 </div>
 <!-- END: Pagination -->
