--- a/location-northpoint-city.html
+++ b/location-northpoint-city.html
@@ -382,7 +382,7 @@ Additional Classes:
 <div class="nk-pagination nk-pagination-center">
     <div class="container">
         <a class="nk-pagination-prev" href="location-beach-road.html"><span class="pe-7s-angle-left"></span> Beach Road Outlet</a>
-        <a class="nk-pagination-next" href="location-chinatown.html"><span class="pe-7s-angle-right"></span> Chinatown Outlet</a>
+        <a class="nk-pagination-next" href="location-chinatown.html">Chinatown Outlet <span class="pe-7s-angle-right"></span></a>
     </div>
 </div>
 <!-- END: Pagination -->
