--- a/404.html
+++ b/404.html
@@ -349,10 +349,10 @@ Additional Classes:
                         
     <div class="row vertical-gap">
         <div class="col-lg-7 text-center">
-            <h1 class="display-extra-big">404</h1>
+            <h1 class="display-extra-big text-white">404</h1>
             <div class="nk-gap mnt-3"></div>
 
-            <p class="nk-heading-font text-black lead">We are sorry. But the page you are looking <br> for cannot be found.</p>
+            <p class="nk-heading-font text-white lead">We are sorry. But the page you are looking <br> for cannot be found.</p>
 
             <div class="nk-gap mnt-10"></div>
 
