Changed the nav bar to show favicon
Referred to wrong file mhyicon, should have been icon... oops!

--- a/location-beach-road.html
+++ b/location-beach-road.html
@@ -21,7 +21,7 @@
     <meta name="keywords" content="dessert, food, asian">
     <meta name="author" content="Tan Chin How">
 
-    <link rel="icon" type="image/png" href="assets/images/mhylogo.png">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -380,7 +380,7 @@ Additional Classes:
 <div class="nk-pagination nk-pagination-center">
     <div class="container">
         <a class="nk-pagination-prev" href="location-marina-square.html"><span class="pe-7s-angle-left"></span> Marina Square Outlet</a>
-        <a class="nk-pagination-next" href="location-northpoint-city.html">Northpoint City@Yishun<span class="pe-7s-angle-right"></span></a>
+        <a class="nk-pagination-next" href="location-northpoint-city.html">Northpoint City@Yishun <span class="pe-7s-angle-right"></span></a>
     </div>
 </div>
 <!-- END: Pagination -->
