--- a/franchise.html
+++ b/franchise.html
@@ -21,7 +21,7 @@
     <meta name="keywords" content="dessert, food, asian, contactUs">
     <meta name="author" content="Ho Xiu Qi">
 
-    <link rel="icon" type="image/png" href="assets/images/mhylogo.png">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
