--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="keywords" content="dessert, food, asian">
     <meta name="author" content="Jonathan Lee">
 
-    <link rel="icon" type="image/png" href="assets/images/mhylogo.png">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
